--- a/app/src/main/res/layout-w600dp/fragment_class_list.xml
+++ b/app/src/main/res/layout-w600dp/fragment_class_list.xml
@@ -10,7 +10,7 @@
         android:layout_weight="1"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/list"
+        android:id="@+id/classListRecyclerview"
         android:name="uk.co.tezk.trainspotter.view.ClassListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
