--- a/app/src/main/res/layout/fragment_class_list.xml
+++ b/app/src/main/res/layout/fragment_class_list.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/classListRecyclerview"
     android:name="uk.co.tezk.trainspotter.view.ClassListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
