--- a/app/src/main/res/layout/fragment_class_list.xml
+++ b/app/src/main/res/layout/fragment_class_list.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/classListRecyclerview"
     android:name="uk.co.tezk.trainspotter.view.ClassListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/fragment_margin"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="uk.co.tezk.trainspotter.view.ClassListFragment"
     tools:listitem="@layout/class_list_item" />
