--- a/app/src/main/res/layout-land/fragment_log_spot.xml
+++ b/app/src/main/res/layout-land/fragment_log_spot.xml
@@ -8,40 +8,40 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/fragment_margin"
         >
 
         <GridLayout
+            android:id="@+id/gridLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:id="@+id/gridLayout">
+            android:layout_margin="@dimen/fragment_margin"
+            android:padding="12dp">
 
             <TextView
                 android:id="@+id/tvId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/train_id"
+                android:layout_column="0"
                 android:layout_row="0"
-                android:layout_column="0" />
+                android:text="@string/train_id" />
 
             <EditText
+                android:id="@+id/etTrainId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_row="0"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text=""
-                android:id="@+id/etTrainId"
-                android:layout_row="0"
-                android:layout_column="1"
-                />
+                android:text="" />
+
             <TextView
                 android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/date"
+                android:layout_column="0"
                 android:layout_row="1"
-                android:layout_column="0" />
+                android:text="@string/date" />
 
             <EditText
                 android:id="@+id/etDate"
@@ -59,17 +59,19 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/gridLayout"
-            android:layout_below="@+id/gridLayout" />
-        <FrameLayout
-            android:id="@+id/mapHolder"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:layout_toRightOf="@+id/gridLayout"
-            >
+            android:layout_below="@id/gridLayout"/>
 
-        </FrameLayout>
+        <fragment
+            android:id="@+id/mapHolder"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/gridLayout"
+
+            android:layout_alignParentTop="true"
+            tools:context="uk.co.tezk.trainspotter.view.MapsActivity">
+
+        </fragment>
 
     </RelativeLayout>
 
