--- a/app/src/main/res/layout-w600dp/fragment_train_list.xml
+++ b/app/src/main/res/layout-w600dp/fragment_train_list.xml
@@ -9,10 +9,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/fragment_margin"
         android:padding="8dp">
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/trainListRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
