--- a/app/src/main/res/layout/train_list_card_layout_item.xml
+++ b/app/src/main/res/layout/train_list_card_layout_item.xml
@@ -1,5 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:background="#ccc"
+    android:paddingTop="8dp"
+    android:layout_marginTop="16dp"
+    app:cardCornerRadius="6dp"
+    android:elevation="16dp"
+    android:paddingLeft="8dp"
+    >
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        >
+
+        <TextView
+            android:id="@+id/tvTrainIdLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:paddingBottom="8dp"
+            android:layout_gravity="right"
+            android:text="@string/number" />
+
+        <TextView
+            android:id="@+id/tvTrainId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:paddingRight="8dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/tvTrainNameLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="2"
+            android:layout_row="0"
+            android:layout_gravity="right"
+            android:text="@string/name" />
+
+        <TextView
+            android:id="@+id/tvTrainName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="3"
+            android:layout_row="0"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/tvTrainDepotLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:paddingBottom="8dp"
+            android:layout_gravity="right"
+            android:text="@string/depot" />
+
+        <TextView
+            android:id="@+id/tvTrainDepot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/tvLiveryLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="2"
+            android:layout_row="1"
+            android:layout_gravity="right"
+            android:text="@string/livery" />
+
+        <TextView
+            android:id="@+id/tvTrainLivery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="3"
+            android:layout_row="1"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/tvTrainLastSpottedLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="2"
+            android:paddingBottom="8dp"
+            android:layout_gravity="right"
+            android:text="@string/last_spotted" />
+
+        <TextView
+            android:id="@+id/tvTrainLastSpotted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/tvTrainWhereLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="2"
+            android:layout_row="2"
+            android:layout_gravity="right"
+            android:text="@string/where" />
+
+        <TextView
+            android:id="@+id/tvTrainWhere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="3"
+            android:layout_row="2"
+            android:text="TextView" />
+
+        <ImageView
+            android:id="@+id/ivTrainSighting"
+            android:layout_width="46dp"
+            android:layout_height="wrap_content"
+            android:layout_column="4"
+            android:layout_row="0"
+            android:layout_rowSpan="3"
+            android:layout_gravity="center"
+            app:srcCompat="@android:drawable/ic_menu_view" />
+
+
+    </GridLayout>
 </android.support.v7.widget.CardView>
