--- a/app/src/main/res/layout-land/fragment_train_detail.xml
+++ b/app/src/main/res/layout-land/fragment_train_detail.xml
@@ -16,96 +16,154 @@
             android:layout_margin="@dimen/fragment_margin">
 
             <TextView
-                android:id="@+id/tvTrainNumber"
+                android:id="@+id/tcClassLabel"
+                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
+                android:layout_marginBottom="8dp"
                 android:layout_row="0"
-                android:text="@string/number" />
+                android:text="Class :" />
 
-            <EditText
-                android:id="@+id/etTrainNumber"
+            <TextView
+                android:id="@+id/tvClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="0"
-                android:editable="false"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/tvTrainNumberLabel"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="1"
+                android:layout_marginBottom="8dp"
+                android:text="@string/number" />
+
+            <TextView
+                android:id="@+id/tvTrainNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_row="1"
+                android:ems="10" />
+
+            <TextView
+                android:id="@+id/tvTrainNameLabel"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="2"
+                android:layout_marginBottom="8dp"
+                android:text="@string/name" />
 
             <TextView
                 android:id="@+id/tvTrainName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="1"
-                android:text="@string/name" />
-
-            <EditText
-                android:id="@+id/etTrainName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_row="1"
-                android:editable="false"
+                android:layout_row="2"
                 android:ems="10"
                 android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/tvTrainLiveryLabel"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="3"
+                android:layout_marginBottom="8dp"
+                android:text="@string/livery" />
 
             <TextView
                 android:id="@+id/tvTrainLivery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="2"
-                android:text="@string/livery" />
-
-            <EditText
-                android:id="@+id/etTrainLivery"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_row="2"
-                android:editable="false"
+                android:layout_row="3"
                 android:ems="10"
                 android:inputType="textPersonName" />
 
+
+            <TextView
+                android:id="@+id/tvTrainOperatorLabel"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_column="0"
+                android:layout_row="4"
+                android:text="@string/operator" />
 
             <TextView
                 android:id="@+id/tvTrainOperator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="3"
-                android:text="@string/operator" />
-
-            <EditText
-                android:id="@+id/etTrainOperator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_row="3"
-                android:editable="false"
+                android:layout_row="4"
                 android:ems="10"
                 android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/tvTrainDepotLabel"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="5"
+                android:layout_marginBottom="8dp"
+                android:text="@string/depot" />
 
             <TextView
                 android:id="@+id/tvTrainDepot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="4"
-                android:text="@string/depot" />
+                android:layout_column="1"
+                android:layout_row="5"
+                android:ems="10"/>
 
-            <EditText
-                android:id="@+id/etTrainDepot"
+            <TextView
+                android:id="@+id/tvTrainLastSpottedLabel"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="6"
+
+                android:text="@string/last_seen" />
+
+            <TextView
+                android:id="@+id/tvTrainLastSpotted"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_row="4"
-                android:editable="false"
+                android:layout_row="6"
                 android:ems="10"
+                android:layout_marginBottom="8dp"
                 android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/tvTrainWhereLabel"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="7"
+                android:text="@string/where" />
+            <TextView
+                android:id="@+id/tvTrainWhere"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_row="7"
+                android:ems="10"/>
         </GridLayout>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/trainDetailImageRecyclerView"
             android:layout_below="@+id/gridLayout"
