--- a/app/src/main/res/layout-w600dp/fragment_class_list.xml
+++ b/app/src/main/res/layout-w600dp/fragment_class_list.xml
@@ -1,28 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/classListLandscapeLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    tools:context="uk.co.tezk.trainspotter.view.ClassListFragment">
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_weight="1"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/classListRecyclerview"
-        android:name="uk.co.tezk.trainspotter.view.ClassListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:context="uk.co.tezk.trainspotter.view.ClassListFragment"
-        tools:listitem="@layout/class_list_item" />
+        android:layout_marginLeft="8dp"
+        android:layout_weight="1"/>
 
     <FrameLayout
         android:id="@+id/trainListFragmentHolder"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_marginLeft="8dp">
+
+    </FrameLayout>
 </LinearLayout>
