--- a/app/src/main/res/layout-w600dp/fragment_train_list.xml
+++ b/app/src/main/res/layout-w600dp/fragment_train_list.xml
@@ -1,27 +1,20 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/trainListLandscapeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context="uk.co.tezk.trainspotter.view.TrainListFragment">
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/trainListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:layout_weight="1" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/trainListRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            />
-        <FrameLayout
-            android:id="@+id/trainDetailFragmentHolder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></FrameLayout>
-    </RelativeLayout>
-
-</FrameLayout>
+    <FrameLayout
+        android:id="@+id/trainDetailFragmentHolder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"></FrameLayout>
+</LinearLayout>
