--- a/app/src/main/res/layout/fragment_log_spot.xml
+++ b/app/src/main/res/layout/fragment_log_spot.xml
@@ -76,7 +76,7 @@
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Map loading, please wait"/>
+                android:text="@string/map_loading_please_wait"/>
         </FrameLayout>
 
     </RelativeLayout>
