--- a/app/src/main/res/layout-w600dp/fragment_train_list.xml
+++ b/app/src/main/res/layout-w600dp/fragment_train_list.xml
@@ -16,5 +16,10 @@
         android:id="@+id/trainDetailFragmentHolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"></FrameLayout>
+        android:layout_weight="1">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="tablet train list, detail holder"/>
+    </FrameLayout>
 </LinearLayout>
