--- a/app/src/main/res/layout/fragment_log_spot.xml
+++ b/app/src/main/res/layout/fragment_log_spot.xml
@@ -58,7 +58,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvSpotImages"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="130dp"
+            android:foregroundGravity="center"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/gridLayout" />
