--- a/app/src/main/res/layout/fragment_train_detail.xml
+++ b/app/src/main/res/layout/fragment_train_detail.xml
@@ -6,13 +6,14 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <GridLayout
             android:id="@+id/gridLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/bpWhite"
+            android:padding="8dp"
             android:layout_margin="@dimen/fragment_margin">
 
             <TextView
@@ -31,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="0"
+                android:ems="10"
                 android:text="TextView" />
 
             <TextView
@@ -40,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:layout_row="0"
+                android:layout_marginBottom="8dp"
                 android:text="@string/number" />
 
             <TextView
@@ -48,16 +51,16 @@
                 android:layout_height="wrap_content"
                 android:layout_column="3"
                 android:layout_row="0"
-                android:ems="10" />
+                 />
 
             <TextView
                 android:id="@+id/tvTrainNameLabel"
                 android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_column="0"
                 android:layout_row="1"
+                android:layout_marginBottom="8dp"
                 android:text="@string/name" />
 
             <TextView
@@ -66,7 +69,8 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="1"
-                android:ems="10" />
+                android:ems="7"
+                android:inputType="textPersonName" />
 
             <TextView
                 android:id="@+id/tvTrainLiveryLabel"
@@ -75,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:layout_row="1"
+                android:layout_marginBottom="8dp"
                 android:text="@string/livery" />
 
             <TextView
@@ -83,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_column="3"
                 android:layout_row="1"
-                android:ems="10"/>
+                android:inputType="textPersonName" />
 
 
             <TextView
@@ -102,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="2"
-                android:ems="10" />
+                android:inputType="textPersonName" />
 
             <TextView
                 android:id="@+id/tvTrainDepotLabel"
@@ -111,6 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:layout_row="2"
+                android:layout_marginBottom="8dp"
                 android:text="@string/depot" />
 
             <TextView
@@ -137,7 +143,8 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="3"
-                android:ems="10"/>
+                android:layout_marginBottom="8dp"
+                android:inputType="textPersonName" />
 
             <TextView
                 android:id="@+id/tvTrainWhereLabel"
@@ -153,17 +160,17 @@
                 android:layout_height="wrap_content"
                 android:layout_column="3"
                 android:layout_row="3"
-                android:ems="10"/>
+                />
         </GridLayout>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/trainDetailImageRecyclerView"
-            android:layout_below="@+id/gridLayout"
             android:layout_width="match_parent"
-            android:layout_marginRight="@dimen/fragment_margin"
-            android:layout_marginLeft="@dimen/fragment_margin"
+            android:layout_height="80dp"
+            android:layout_below="@+id/gridLayout"
             android:layout_marginBottom="@dimen/fragment_margin"
-            android:layout_height="80dp">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_marginLeft="@dimen/fragment_margin"
+            android:layout_marginRight="@dimen/fragment_margin"></android.support.v7.widget.RecyclerView>
 
         <FrameLayout
             android:id="@+id/mapHolder"
@@ -171,11 +178,12 @@
             android:layout_height="match_parent"
 
             android:layout_below="@+id/trainDetailImageRecyclerView">
+
             <TextView
-                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/map_loading_please_wait"/>
+                android:layout_gravity="center"
+                android:text="@string/map_loading_please_wait" />
         </FrameLayout>
 
     </RelativeLayout>
