--- a/app/src/main/res/layout/fragment_log_spot.xml
+++ b/app/src/main/res/layout/fragment_log_spot.xml
@@ -40,7 +40,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/date"
-                android:layout_margin="8dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="8dp"
                 android:layout_row="1"
                 android:layout_column="0" />
 
@@ -48,9 +49,11 @@
                 android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:layout_gravity="bottom"
+                android:padding="7dp"
                 android:layout_row="1"
                 android:layout_column="1"
+                android:textSize="16dp"
                 android:text="TextView" />
 
         </GridLayout>
