--- a/app/src/main/res/layout-w600dp/fragment_class_list.xml
+++ b/app/src/main/res/layout-w600dp/fragment_class_list.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/classListLandscapeLayout"
+    android:id="@+id/landscapeLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="horizontal"
@@ -11,11 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="8dp"
-        android:layout_weight="1"/>
+        android:layout_weight="11"/>
 
     <FrameLayout
         android:id="@+id/trainListFragmentHolder"
-        android:layout_weight="1"
+        android:layout_weight="9"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="8dp">
