--- a/app/src/main/res/layout-w600dp/fragment_train_list.xml
+++ b/app/src/main/res/layout-w600dp/fragment_train_list.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/trainListLandscapeLayout"
+    android:id="@+id/landscapeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -17,9 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="tablet train list, detail holder"/>
+
     </FrameLayout>
 </LinearLayout>
