--- a/app/src/main/res/layout/fragment_train_detail_subfragment.xml
+++ b/app/src/main/res/layout/fragment_train_detail_subfragment.xml
@@ -6,13 +6,15 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <GridLayout
             android:id="@+id/gridLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/bpWhite"
+            android:padding="8dp"
+            android:outlineProvider="background"
             android:layout_margin="@dimen/fragment_margin">
 
             <TextView
@@ -23,7 +25,7 @@
                 android:layout_column="0"
                 android:layout_marginBottom="8dp"
                 android:layout_row="0"
-                android:text="Class :" />
+                android:text="@string/class_label" />
 
             <TextView
                 android:id="@+id/tvClass"
@@ -31,15 +33,17 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="0"
-                android:text="TextView" />
+                android:ems="7"
+
+                android:text="@string/loading" />
 
             <TextView
                 android:id="@+id/tvTrainNumberLabel"
                 android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="1"
+                android:layout_column="2"
+                android:layout_row="0"
                 android:layout_marginBottom="8dp"
                 android:text="@string/number" />
 
@@ -47,9 +51,10 @@
                 android:id="@+id/tvTrainNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="1"
-                android:ems="10" />
+                android:layout_column="3"
+                android:layout_row="0"
+                android:ems="7"
+                 />
 
             <TextView
                 android:id="@+id/tvTrainNameLabel"
@@ -57,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_row="2"
+                android:layout_row="1"
                 android:layout_marginBottom="8dp"
                 android:text="@string/name" />
 
@@ -66,28 +71,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_row="2"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:layout_row="1"
+                android:inputType="textPersonName"
+                android:ems="7"/>
 
             <TextView
                 android:id="@+id/tvTrainLiveryLabel"
                 android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="3"
+                android:layout_column="2"
+                android:layout_row="1"
                 android:layout_marginBottom="8dp"
-                android:text="@string/livery" />
+                android:text="@string/livery"
+                />
 
             <TextView
                 android:id="@+id/tvTrainLivery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="3"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:layout_column="3"
+                android:layout_row="1"
+                android:ems="7"/>
 
 
             <TextView
@@ -97,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_column="0"
-                android:layout_row="4"
+                android:layout_row="2"
                 android:text="@string/operator" />
 
             <TextView
@@ -105,17 +110,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_row="4"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:layout_row="2"
+                android:layout_weight="1"
+                android:ellipsize="none"
+                android:maxLines="3"
+                android:scrollHorizontally="false"
+                android:ems="7"/>
 
             <TextView
                 android:id="@+id/tvTrainDepotLabel"
                 android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="5"
+                android:layout_column="2"
+                android:layout_row="2"
                 android:layout_marginBottom="8dp"
                 android:text="@string/depot" />
 
@@ -123,9 +131,9 @@
                 android:id="@+id/tvTrainDepot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="5"
-                android:ems="10"/>
+                android:layout_column="3"
+                android:layout_row="2"
+                android:ems="7"/>
 
             <TextView
                 android:id="@+id/tvTrainLastSpottedLabel"
@@ -133,7 +141,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_row="6"
+                android:layout_row="3"
 
                 android:text="@string/last_seen" />
 
@@ -142,46 +150,49 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_row="6"
-                android:ems="10"
+                android:layout_row="3"
                 android:layout_marginBottom="8dp"
-                android:inputType="textPersonName" />
+                android:ems="7"/>
 
             <TextView
                 android:id="@+id/tvTrainWhereLabel"
                 android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="7"
+                android:layout_column="2"
+                android:layout_row="3"
                 android:text="@string/where" />
             <TextView
                 android:id="@+id/tvTrainWhere"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="7"
-                android:ems="10"/>
+                android:layout_column="3"
+                android:layout_row="3"
+                android:ems="7"
+                />
         </GridLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvGallery"
-            android:layout_below="@+id/gridLayout"
             android:layout_width="match_parent"
-            android:layout_marginRight="@dimen/fragment_margin"
-            android:layout_marginLeft="@dimen/fragment_margin"
+            android:layout_height="80dp"
+            android:layout_below="@+id/gridLayout"
             android:layout_marginBottom="@dimen/fragment_margin"
-            android:layout_alignRight="@+id/gridLayout"
-            android:layout_height="80dp">
+            android:layout_marginLeft="@dimen/fragment_margin"
+            android:layout_marginRight="@dimen/fragment_margin"></android.support.v7.widget.RecyclerView>
 
-        </android.support.v7.widget.RecyclerView>
         <FrameLayout
             android:id="@+id/mapHolder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            android:layout_toRightOf="@+id/gridLayout">
+            android:layout_below="@+id/rvGallery">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/map_loading_please_wait" />
         </FrameLayout>
 
     </RelativeLayout>
