--- a/app/src/main/res/layout-land/fragment_log_spot.xml
+++ b/app/src/main/res/layout-land/fragment_log_spot.xml
@@ -11,7 +11,7 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardViewDetails"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fragment_margin"
             android:backgroundTint="@color/white"
@@ -59,6 +59,27 @@
                     android:ems="10"
                     android:inputType="date"
                     android:text="" />
+
+                <TextView
+                    android:id="@+id/tvLocationLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/location"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="8dp"
+                    android:layout_row="2"
+                    android:layout_column="0" />
+
+                <EditText
+                    android:id="@+id/etLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:padding="7dp"
+                    android:layout_row="2"
+                    android:layout_column="1"
+                    android:textSize="16dp"
+                    android:text="" />
             </GridLayout>
         </android.support.v7.widget.CardView>
 
@@ -76,7 +97,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
 
-            android:layout_toRightOf="@id/gridLayout"
+            android:layout_toRightOf="@id/cardViewDetails"
             tools:context="uk.co.tezk.trainspotter.view.MapsActivity">
 
         </fragment>
