--- a/app/src/main/res/layout-w600dp/fragment_class_list.xml
+++ b/app/src/main/res/layout-w600dp/fragment_class_list.xml
@@ -14,11 +14,10 @@
         android:layout_weight="11"/>
 
     <FrameLayout
-        android:id="@+id/trainListFragmentHolder"
+        android:id="@+id/fragmentHolder"
         android:layout_weight="9"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="8dp">
+        android:layout_height="match_parent">
 
     </FrameLayout>
 </LinearLayout>
