--- a/app/src/main/res/layout/train_list_card_layout_item.xml
+++ b/app/src/main/res/layout/train_list_card_layout_item.xml
@@ -103,7 +103,7 @@
             android:layout_row="2"
             android:paddingBottom="8dp"
             android:layout_gravity="right"
-            android:text="@string/last_spotted" />
+            android:text="@string/last_seen" />
 
         <TextView
             android:id="@+id/tvTrainLastSpotted"
