--- a/app/src/main/res/layout/class_list_card_layout_item.xml
+++ b/app/src/main/res/layout/class_list_card_layout_item.xml
@@ -13,7 +13,7 @@
             >
 
             <TextView
-                android:id="@+id/tvClassDescription"
+                android:id="@+id/classLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -23,22 +23,29 @@
                 android:text="@string/class_string" />
 
             <TextView
-                android:id="@+id/tvClassNumber"
+                android:id="@+id/classNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/tvClassDescription"
+                android:layout_toRightOf="@+id/classLabel"
                 android:textSize="24sp"
-
                 android:text="class no"/>
             <TextView
-                android:id="@+id/tvClassSightingCount"
-                android:layout_width="match_parent"
+                android:id="@+id/noSightingTextView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@+id/tvClassDescription"
+                android:layout_below="@+id/classNameTextView"
                 android:textSize="16sp"
                 android:text="@string/no_sightings_logged"/>
+
+            <ImageView
+                android:id="@+id/expandIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                app:srcCompat="@android:drawable/ic_menu_more" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
